2016-11-09  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3.c: publicURl and region can be unordered

2016-11-04  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3.c: Use the publicURL from the good region

2016-11-02  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amcheck.c: Fix

2016-11-01  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Status.pm: Set $dlet->{'wsize'} to $dlet->{'taped_size'}
	  if it is bigger
	* perl/Amanda/Taper/Scribe.pm (get_bytes_written): Do not set oldsize
	  to size if size==0
	* perl/Amanda/Taper/Worker.pm: Delete the statefile later

2016-11-01  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/xfer-dest-taper-splitter.c: ring buffer might never be
	  full

2016-10-31  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amcheck.c: Print message 2800016 to mainfd

2016-10-31  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Service/Amidxtaped.pm: Do not send mesage 4900000 and
	  4900012 to client
	* recover-src/extract_list.c: Print size on EOF

2016-10-26  Jean-Louis Martineau <JMartineau@carbonite.com>
	* packaging/rpm/amanda.spec.src: Remove perl(Dancer2) from the Requires

2016-10-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/DB.pm: package Amanda::DB;
	* perl/Amanda/Recovery.pm: package Amanda::Recovery;
	* perl/Amanda/Service.pm: package Amanda::Service;

2016-10-24  Jean-Louis Martineau <JMartineau@carbonite.com>
	* config/amanda/dvdrw-device.m4, config/amanda/ndmp-device.m4,
	  config/amanda/s3-device.m4: Do not include the device if compiled
	  --without-server

2016-10-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* config/amanda/libs.m4: Do not link with libcurl if no se device or
	  no server
	* config/amanda/s3-device.m4: Re-order

2016-10-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Makefile.am: Amanda::FetchDump::*, Amanda::Recovery::* and