@@ -1,4 +1,7 @@
 2016-11-09  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* device-src/s3.c: Verify a publicURL is found
+
+2016-11-09  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* device-src/s3.c: publicURl and region can be unordered
 
 2016-11-04  Jean-Louis Martineau <JMartineau@carbonite.com>
